--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,94 @@
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  width: 100%;
+}
+.app {
+  text-align: center;
+  margin-top: 2rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.task-columns {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 1rem;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.task-list {
+  flex: 1;
+  padding: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin: 0 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.task-item {
+  background-color: #f0f0f0;
+  padding: 0.5rem;
+  margin: 0.25rem 0;
+  border-radius: 5px;
+  text-align: left;
+  display: flex;
+  justify-content: space-between;
+}
+
+.task-item button {
+  background-color: #ff4d4f;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  margin-left: 5px;
+}
+
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 2rem;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+
+.modal-content button {
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  margin-top: 1rem;
+  cursor: pointer;
 }
 
 .card {
-  padding: 2em;
+  padding: 20px 10px;
+  border: 1px solid #eee;
+  border-radius: 10px;
 }
 
-.read-the-docs {
-  color: #888;
+form {
+  @apply w-[70vw] h-[70vh] grid grid-cols-2 gap-5 p-5;
+}
+
+form div {
+  @apply flex flex-col text-left;
+}
+
+form input, textarea, select {
+  @apply border-2 border-black/60 rounded mx-1
 }
